Fix background-attachment on iPhone (Safari)

--- a/css/common.css
+++ b/css/common.css
@@ -15,12 +15,21 @@ body {
     padding: 100px, 100px;
 }
 
+main::before {
+    content: "";
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100vh;
+    background: url("../images/nkn-croped.png") center no-repeat;
+    background-size: cover;
+}
+
 .main {
     image-rendering: pixelated;
-    background-image: url("../images/nkn-croped.png");
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
     overflow-x: hidden;
 }
 
